# systemc-practice

./: CMakeLists.txt  README.md  and2.cpp  fir.cpp  fir.hpp  main.cpp  tb.cpp  tb.hpp
